fixed alignment issues and responsivity

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,6 @@
 header {
     height: 100vh;
+    width: 100%;
     padding-top: 7rem;
     overflow: hidden;
 }
@@ -26,7 +27,8 @@ header {
     background: transparent;
     padding: 15px;
     margin: 5px;
-    margin-left: -30px;
+    margin-left: -20px;
+    float: left;
     bottom: 0;
     border-radius: 50%;
     display: flex;
@@ -45,7 +47,7 @@ header {
 .headshot img {
     width: 300px;
     border-radius: 50%;
-    margin-top: 40px;
+    margin-top: 60px;
     position: absolute;
     left: calc(50% - 150px);
 }
@@ -53,7 +55,7 @@ header {
 /* down arrow */
 .scroll-down {
     position: absolute;
-    right: -10px;
+    right: 10px;
     bottom: 30px;
     font-size: 30px;
 }
