--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -5,7 +5,6 @@ nav {
 
     background: rgba(0, 0, 0, 0.3);
     width: max-content;
-    padding: 10px 10px;
     z-index: 2;
     position: fixed;
 
@@ -18,7 +17,7 @@ nav {
 nav a {
     background: transparent;
     padding: 15px;
-    margin: 5px;
+    margin: 10px;
     border-radius: 50%;
     display: flex;
     color: var(--color-light);
